Changed some value in UI

--- a/app/src/main/assets/www/app.html
+++ b/app/src/main/assets/www/app.html
@@ -35,8 +35,8 @@
 <script>
 var app = angular.module('myApp', []);
 app.controller('controller', function($scope) {
-	$scope.firstName = "Seattle";
-	$scope.lastName = "Washington";
+	$scope.firstName = "Monash";
+	$scope.lastName = "Demo";
 });
 </script>
 
